fixed the header and footer on small screen sizes, fixed the about details section overlap with footer on small screen sizes

--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -153,7 +153,7 @@ img {
 /* DETAILS */
 
 .details-container {
-  height: 80vh;
+  height: max-content;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 4rem;
