--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -169,3 +169,58 @@ footer aside {
   margin-left: 2rem;
   text-align: left;
 }
+
+@media only screen and (max-width: 900px) {
+
+  nav {
+    height: max-content;
+  }
+
+  nav a, nav a:first-child {
+    padding: 0 2rem 0 2rem;
+    margin: 0.5rem;
+    font-size: 1.2rem;
+  }
+
+  .splash h1 {
+    font-size: 3rem;
+    margin-top: 25vh;
+  }
+
+  footer {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 2fr 1fr;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+  }
+
+  footer aside {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    margin: 0;
+    margin-right: 1rem;
+  }
+
+  .anchor {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  footer p {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-left: -2rem;
+  }
+
+}
